@@ -109,3 +109,4 @@ For 0.3:
 * Abhiram <abhiram.ampabathina@gmail.com>
 * Alan Gomes <alangalvino@gmail.com>
 * Stefan Handschuh <https://launchpad.net/~handschuh> (no email provided)
+* Tom Kadwill <tomkadwill@gmail.com>
